--- a/.env
+++ b/.env
@@ -1,27 +1,31 @@
-# App Configuration
+# ========================================
+# APP CONFIGURATION
+# ========================================
 APP_NAME=Pure & Desi API
 APP_VERSION=1.0.0
-DEBUG=True
+DEBUG=False    # ✅ CHANGED: Use mock for development
 
 # Server
 HOST=0.0.0.0
 PORT=8000
 
+# Google OAuth
 GOOGLE_CLIENT_ID=915462319895-dsml59ip8t1jc92tjfv4mg6c94p6n086.apps.googleusercontent.com
-# Database (PostgreSQL) - @ symbol encoded as %40
+
+# ========================================
+# DATABASE
+# ========================================
 DATABASE_URL=postgresql://postgres:Mohit%4018@localhost:5432/pure_and_desi
 
-# CORS Origins (JSON array format)
+# ========================================
+# CORS ORIGINS
+# ========================================
 CORS_ORIGINS=["http://localhost:3000","http://localhost:5173","http://localhost:5174"]
 
 # ========================================
-# SMS/OTP Configuration (UPDATED)
+# SMS/OTP CONFIGURATION
 # ========================================
-
-# Development Mode (Set to False for production)
 DEVELOPMENT_MODE=false
-
-# SMS Provider (msg91, twilio, fast2sms)
 SMS_PROVIDER=msg91
 
 # MSG91 Configuration
@@ -30,7 +34,7 @@ MSG91_SENDER_ID=PURDSI
 MSG91_TEMPLATE_ID=68f0e555fbad781e0a293603
 MSG91_ROUTE=4
 
-# Legacy template IDs (keep for other features)
+# Legacy template IDs
 MSG91_DEFAULT_TEMPLATE_ID=68f0e555fbad781e0a293603
 SMS_OTP_TEMPLATE_ID=68f0e555fbad781e0a293603
 SMS_ORDER_CONFIRMATION_TEMPLATE_ID=your_order_template_id
@@ -38,24 +42,41 @@ SMS_SHIPPING_UPDATE_TEMPLATE_ID=your_shipping_template_id
 SMS_DELIVERY_NOTIFICATION_TEMPLATE_ID=your_delivery_template_id
 
 # ========================================
-# Other Configurations (Keep as is)
+# SHIPROCKET CONFIGURATION
 # ========================================
+SHIPROCKET_EMAIL="mohitsahu15042021@gmail.com"
+SHIPROCKET_PASSWORD="h4!OFl3q5AoX9^*2"
+SHIPROCKET_USE_STAGING=False
+SHIPROCKET_CHANNEL_ID=
 
-# Delhivery API
-DELHIVERY_API_KEY=your_delhivery_api_key_here
-DELHIVERY_USE_STAGING=True
-
-# Razorpay Payment Gateway
+# ========================================
+# RAZORPAY PAYMENT GATEWAY
+# ========================================
 RAZORPAY_KEY_ID=rzp_test_RXeCOZjzM5In3E
-
 RAZORPAY_KEY_SECRET=yMU9Ev724BnSMXFXLn26keyF
 
-# WhatsApp Business API
+# ========================================
+# WAREHOUSE/BUSINESS DETAILS
+# ========================================
+WAREHOUSE_NAME=Pure & Desi Warehouse
+WAREHOUSE_ADDRESS=Radha Nagar, Fatehpur
+WAREHOUSE_CITY=Fatehpur
+WAREHOUSE_STATE=Uttar Pradesh
+WAREHOUSE_PINCODE=212601
+WAREHOUSE_PHONE=+918887948909
+COMPANY_NAME=Pure & Desi
+GST_NUMBER=your_gst_number
+
+# ========================================
+# WHATSAPP BUSINESS API
+# ========================================
 WHATSAPP_API_TOKEN=your_whatsapp_token_here
 WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id_here
 WHATSAPP_BUSINESS_PHONE=+919876543210
 
-# Email Configuration (SMTP)
+# ========================================
+# EMAIL CONFIGURATION (SMTP)
+# ========================================
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=your_email@gmail.com
@@ -64,37 +85,45 @@ FROM_EMAIL=noreply@pureanddesi.com
 FROM_NAME=Pure & Desi
 ADMIN_EMAIL=admin@pureanddesi.com
 
-# Twilio (Alternative SMS Provider)
+# ========================================
+# TWILIO (ALTERNATIVE SMS)
+# ========================================
 TWILIO_ACCOUNT_SID=your_twilio_sid
 TWILIO_AUTH_TOKEN=your_twilio_token
 TWILIO_PHONE_NUMBER=+1234567890
 
-# Warehouse/Business Details
-WAREHOUSE_NAME=Pure & Desi Warehouse
-WAREHOUSE_ADDRESS=Green Street, Organic Market, New Delhi
-WAREHOUSE_CITY=Delhi
-WAREHOUSE_STATE=Delhi
-WAREHOUSE_PINCODE=110001
-WAREHOUSE_PHONE=+919876543210
-COMPANY_NAME=Pure & Desi
-GST_NUMBER=your_gst_number
-
-# JWT Secret
+# ========================================
+# JWT SECRET
+# ========================================
 JWT_SECRET_KEY=your_super_secret_jwt_key_change_this_in_production
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION_HOURS=24
 
-# Frontend URL
+# ========================================
+# FRONTEND URL
+# ========================================
 FRONTEND_URL=http://localhost:5173
 
-# File Upload
+# ========================================
+# FILE UPLOAD
+# ========================================
 MAX_UPLOAD_SIZE=5242880
 ALLOWED_EXTENSIONS=["jpg","jpeg","png","gif","pdf"]
 
-# Rate Limiting
+# ========================================
+# RATE LIMITING
+# ========================================
 RATE_LIMIT_PER_MINUTE=60
 RATE_LIMIT_PER_HOUR=1000
 
-# Logging
+# ========================================
+# LOGGING
+# ========================================
 LOG_LEVEL=INFO
 LOG_FILE=logs/app.log
+
+# ========================================
+# DELHIVERY API (LEGACY - NOT USED)
+# ========================================
+DELHIVERY_API_KEY=your_delhivery_api_key_here
+DELHIVERY_USE_STAGING=True
