--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # ========================================
 APP_NAME=Pure & Desi API
 APP_VERSION=1.0.0
-DEBUG=False    # ✅ CHANGED: Use mock for development
+DEBUG=false    # ✅ LIVE MODE: Real Shiprocket (production-ready)
 
 # Server
 HOST=0.0.0.0
@@ -46,7 +46,7 @@ SMS_DELIVERY_NOTIFICATION_TEMPLATE_ID=your_delivery_template_id
 # ========================================
 SHIPROCKET_EMAIL="mohitsahu15042021@gmail.com"
 SHIPROCKET_PASSWORD="h4!OFl3q5AoX9^*2"
-SHIPROCKET_USE_STAGING=False
+SHIPROCKET_USE_STAGING=false
 SHIPROCKET_CHANNEL_ID=
 
 # ========================================
@@ -58,7 +58,7 @@ RAZORPAY_KEY_SECRET=yMU9Ev724BnSMXFXLn26keyF
 # ========================================
 # WAREHOUSE/BUSINESS DETAILS
 # ========================================
-WAREHOUSE_NAME=Pure & Desi Warehouse
+WAREHOUSE_NAME=home
 WAREHOUSE_ADDRESS=Radha Nagar, Fatehpur
 WAREHOUSE_CITY=Fatehpur
 WAREHOUSE_STATE=Uttar Pradesh
