--- a/.env
+++ b/.env
@@ -16,6 +16,8 @@ GOOGLE_CLIENT_ID=915462319895-dsml59ip8t1jc92tjfv4mg6c94p6n086.apps.googleuserco
 # DATABASE
 # ========================================
 DATABASE_URL=postgresql://postgres:Mohit%4018@localhost:5432/pure_and_desi
+# DATABASE_URL=postgresql://postgres:Mohit%4018@db.lrkakuepzkohhrlwaytp.supabase.co:5432/postgres
+
 
 # ========================================
 # CORS ORIGINS
